k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: ingress-service
     annotations:
          cert-manager.io/cluster-issuer: 'letsencrypt-prod'
          kubernetes.io/ingress.class: nginx
          nginx.ingress.kubernetes.io/use-regex: 'true'
          nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec:
     tls:
        - hosts:
          - yolo.sachinms.fyi
          secretName: yolo-tls
     rules:
          - host: yolo.sachinms.fyi
            http:
                 paths:

                      - path: /notification/?(.*)
                        pathType: Prefix
                        backend:
                             service:
                                  name: notification
                                  port:
                                       number: 9000
                      - path: /admin/?(.*)
                        pathType: Prefix
                        backend:
                             service:
                                  name: admin
                                  port:
                                       number: 7300
                      - path: /users/?(.*)
                        pathType: Prefix
                        backend:
                             service:
                                  name: users
                                  port:
                                       number: 7100
                      - path: /posts/?(.*)
                        pathType: Prefix
                        backend:
                             service:
                                  name: posts
                                  port:
                                       number: 7000
                      - path: /messaging/?(.*)
                        pathType: Prefix
                        backend:
                             service:
                                  name: messaging
                                  port:
                                       number: 8000

---
apiVersion: v1
kind: Service
metadata:
     annotations:
          service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
          service.beta.kubernetes.io/do-loadbalancer-hostname: 'yolo.sachinms.fyi'
     labels:
          helm.sh/chart: ingress-nginx-2.0.3
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/version: 0.32.0
          app.kubernetes.io/managed-by: Helm
          app.kubernetes.io/component: controller
     name: ingress-nginx-controller
     namespace: ingress-nginx
spec:
     type: LoadBalancer
     externalTrafficPolicy: Local
     ports:
          - name: http
            port: 80
            protocol: TCP
            targetPort: http
          - name: https
            port: 443
            protocol: TCP
            targetPort: https
     selector:
          app.kubernetes.io/name: ingress-nginx
          app.kubernetes.io/instance: ingress-nginx
          app.kubernetes.io/component: controller
